test/nexj/invalidbase/messages/XML_Invalid_NillableAttribute.message
<Message format="XML">
   <XMLMapping node="outer"/>
   <Parts>
      <Value name="attr" type="string">
         <XMLMapping type="attribute" nillable="true"/>
      </Value>
   </Parts>
</Message>
